--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             }
             handlesubmit=(e)=>{
                 e.preventDefault();
-                console.log('form submitted',this.state.name)
+                console.log('form submitted',this.state)
             }
             
             render(){
